# AndroidKeepAlive

./: README.md  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yourpackage/: KeepAlive.java  MainActivity.java
app/src/main/jni/: Android.mk  CMakeLists.txt  KeepAlive.c  KeepAlive.h
